Implementacion de try cash y manejo de roles
